Java API for MySQL 1.1.0
* MySqlClient.addReads API